Solución de ejercicios de Directivas

--- a/04fundamentosAngularDirectivas/src/app/directiva-atributo/directiva-atributo.component.css
+++ b/04fundamentosAngularDirectivas/src/app/directiva-atributo/directiva-atributo.component.css
@@ -3,10 +3,17 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: larger;
 }
-  .modified {
+.modified {
     font-weight: bold;
   }
   
-  .saveable {
+.saveable {
     border: 2px solid red;
   }
+.textoPregunta{
+  color:blue;
+  font-weight: bolder;
+}
+.textoRespuesta{
+  color:red;
+}
