--- a/04fundamentosAngularDirectivas/src/app/directiva-atributo/directiva-atributo.component.html
+++ b/04fundamentosAngularDirectivas/src/app/directiva-atributo/directiva-atributo.component.html
@@ -7,3 +7,7 @@
 <div [ngStyle]="currentStyles">
     This div is initially italic, normal weight, and extra large (24px).
   </div>
+
+<p [ngClass]="esPregunta ? 'textoPregunta':'textoRespuesta'">
+  ¿Como puedo dar de baja mis datos?
+</p>
