--- a/04fundamentosAngularDirectivas/src/app/directivas-estructura/directivas-estructura.component.html
+++ b/04fundamentosAngularDirectivas/src/app/directivas-estructura/directivas-estructura.component.html
@@ -12,7 +12,7 @@
     <br>
     <button (click)="verificar()">Registrar</button>
     @if(correcto){
-        <p>Registro realizado</p>
+        <p>--Registro realizado</p>
     }@else {
         <p>--Las contraseñas tienen que coincidir</p>
     }
@@ -30,7 +30,7 @@
 }
 </ol>
 <ol>
-    <li *ngFor="let item of planetas"> {{item}}</li>
+    <li *ngFor="let elemento of planetas"> {{elemento}}</li>
 </ol>
 <h3>Caso 2</h3>
 <ul>
@@ -38,8 +38,7 @@
         <li>{{elemento.id}}   {{elemento.nombre}}</li>
     }@empty {
         <p>No hay datos que mostrar</p>
-    }
-    
+    }   
 </ul>
 <ul>
     <li *ngFor="let elemento of usuarios">
